bat.string1.lessons.bat.string1.StringX.scala.error
stringX:8: error: value ++ is not a member of Int
  while(str.drop(i).take(1)=="x")i++;
                                  ^stringX:9: error: value -- is not a member of Int
  while(str.drop(j).take(1)=="x")j--;
                                  ^