bat.string1.lessons.bat.string1.StringX.scala.code
def stringX(str:String):String =
{
  var s=""
  var  suppression=false;
 	var i=0;
  var j=str.length();
  
  while(str.drop(i).take(1)=="x")i++;
  while(str.drop(j).take(1)=="x")j--;
  
 for(k <- i to j)
  {
    
    if(str.drop(i).take(1)!="x" )
    {
      s+=str.drop(i).take(1)
    }
    
  }

  return s
}